--- a/guli/react-admin-client/package.json
+++ b/guli/react-admin-client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
     "customize-cra": "^0.9.1",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "prop-types": "^15.7.2",
