--- a/guli/react-admin-client/package.json
+++ b/guli/react-admin-client/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.10.2",
     "antd": "^3.25.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.2",
+    "bizcharts": "^3.5.6",
     "customize-cra": "^0.9.1",
     "draftjs-to-html": "^0.8.4",
+    "echarts": "^4.5.0",
+    "echarts-for-react": "^2.0.15-beta.1",
     "eslint-plugin-react-hooks": "^2.3.0",
     "jsonp": "^0.2.1",
     "less": "^3.10.3",
